Token authentication functionality
updated swagger doc to include auth test
Add auth bearer method
