# src/routes/events.route.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import EventsController from '../controllers/events.controller';
 //import { CreateEventDto } from '../dtos/events.dto';
 import Route from '../interfaces/routes.interface';
+import authMiddleware from '../middlewares/auth.middleware';
 import validationMiddleware from '../middlewares/validation.middleware';
 
 class EventsRoute implements Route {
@@ -14,6 +15,8 @@ class EventsRoute implements Route {
   }
 
   private initializeRoutes() {
+    this.router.use(`${this.path}`, authMiddleware);
+
     this.router.get(`${this.path}`, this.eventsController.getEvents);
     this.router.get(`${this.path}/:id(\\d+)`, this.eventsController.getEventById);
 //     this.router.post(`${this.path}`, validationMiddleware(CreateEventDto, 'body'), this.eventsController.createEvent);
